recursion.logo.spiral.SpiralUse.scala.error
Erreur de compilation :
SpiralUse:3: error: type mismatch;
 found   : Double(0.1)
 required: Int
    spiral(100,10,1,0.1);
                    ^