recursion.logo.spiral.SpiralUse.scala.code
override def run() {
    spiral(100,10,1,0.1);
}